--- a/package.json
+++ b/package.json
@@ -1,117 +1,42 @@
 {
-  
+  "homepage": "https://sci-fighters-tel-mond.github.io/Site",
   "name": "site-redesign",
-  
   "version": "0.1.0",
-  
   "private": true,
-  
   "dependencies": {
-  
-    
-  "@emailjs/browser": "^3.11.0",
-  
-    
-  "@testing-library/jest-dom": "^5.17.0",
-  
-    
-  "@testing-library/react": "^13.4.0",
-  
-    
-  "@testing-library/user-event": "^13.5.0",
-  
-    
-  "react": "^18.2.0",
-  
-    
-  "react-dom": "^18.2.0",
-  
-    
-  "react-scripts": "5.0.1",
-  
-    
-  "web-vitals": "^2.1.4"
-  
+    "@emailjs/browser": "^3.11.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
-  
-    
-  "start": "react-scripts start",
-  
-    
-  "build": "react-scripts build",
-  
-    
-  "test": "react-scripts test",
-  
-    
-  "eject": "react-scripts eject"
-  
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
-  
-    
-  "extends": [
-  
-    
-    
-  "react-app",
-  
-    
-    
-  "react-app/jest"
-  
-    
-  ]
-  
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  
   "browserslist": {
-  
-    
-  "production": [
-  
-    
-    
-  ">0.2%",
-  
-    
-    
-  "not dead",
-  
-    
-    
-  "not op_mini all"
-  
-    
-  ],
-  
-    
-  "development": [
-  
-    
-    
-  "last 1 chrome version",
-  
-    
-    
-  "last 1 firefox version",
-  
-    
-    
-  "last 1 safari version"
-  
-    
-  ]
-  
-  },
-  
-  "devDependencies": {
-  
-    
-  "gh-pages": "^6.1.0"
-  
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
